--- a/processing.Rmd
+++ b/processing.Rmd
@@ -34,7 +34,7 @@ main_table_chips_2002 <- read_tsv('2002/DS0006/21741-0006-Data.tsv')
 ```
 
 ```{r}
-main_table_chips_2002
+main_table_chips_2002 %>% filter(., coun > 200000, coun < 220000)
 
 ```
 
@@ -77,23 +77,149 @@ province_main <- read_csv('../Administrative-divisions-of-China/dist/provinces.c
 prov_county_main <- left_join(counties_main, province_main,
                               by=c('provinceCode'='code'))
 
+prov_county_main <- prov_county_main %>%
+    rename('cityName' = name.y, 
+           'countyName' = name.x) %>%
+    mutate(., geocodeAdd = paste0(cityName,countyName))
+
+
 prov_county_main
+
+```
+
+
+
+#Grabbing the long lats from google maps
+
+Example request:
+
+##Geocoding
+https://maps.googleapis.com/maps/api/geocode/json?address=1600+Amphitheatre+Parkway,+Mountain+View,+CA&key=YOUR_API_KEY
+
+https://maps.googleapis.com/maps/api/geocode/json?address=辽宁省凤城市&key=AIzaSyAE8v4YljHZYZJ03VydAtAn5yNOGIfr50g 
+
+##Static Map
+
+https://maps.googleapis.com/maps/api/staticmap?center=40.452297,124.066919&zoom=16&size=400x400&maptype=satellite&key=AIzaSyDW8FM0kdCTFMF5iRO3z_tjWynVuzp8_iw
+
+```{r}
+
+# prov_county_main has the city and county data.
+# concatenate the cityName and the countyName to feed in the address to google maps geocode api 
+
+library(jsonlite)
+library(httr)
+library(ggmap)
+
+
+```
+
+```{r}
+
+ggmap_credentials()
+
+register_google(key= "AIzaSyAE8v4YljHZYZJ03VydAtAn5yNOGIfr50g")
+ggmap_credentials()
+
+library(ggmap)
+
+ggmap_credentials()
+
+
+```
+
+```{r}
+
+
+infile <- 'input'
+data <- prov_county_main
+
+addresses = data$geocodeAdd
+
+#define a function that will process googles server responses for us.
+getGeoDetails <- function(address){   
+   #use the gecode function to query google servers
+   geo_reply = geocode(address, output='all', messaging=TRUE, override_limit=TRUE)
+   #now extract the bits that we need from the returned list
+
+   answer <- data.frame(lat=NA, long=NA, accuracy=NA, formatted_address=NA, address_type=NA, status=NA)
+   answer$status <- geo_reply$status
+ 
+   #if we are over the query limit - want to pause for an hour
+   while(geo_reply$status == "OVER_QUERY_LIMIT"){
+       print("OVER QUERY LIMIT - Pausing for 1 hour at:") 
+       time <- Sys.time()
+       print(as.character(time))
+       Sys.sleep(60*60)
+       geo_reply = geocode(address, output='all', messaging=TRUE, override_limit=TRUE)
+       answer$status <- geo_reply$status
+   }
+ 
+   #return Na's if we didn't get a match:
+   if (geo_reply$status != "OK"){
+       return(answer)
+   }   
+   #else, extract what we need from the Google server reply into a dataframe:
+   answer$lat <- geo_reply$results[[1]]$geometry$location$lat
+   answer$long <- geo_reply$results[[1]]$geometry$location$lng   
+   if (length(geo_reply$results[[1]]$types) > 0){
+       answer$accuracy <- geo_reply$results[[1]]$types[[1]]
+   }
+   answer$address_type <- paste(geo_reply$results[[1]]$types, collapse=',')
+   answer$formatted_address <- geo_reply$results[[1]]$formatted_address
+ 
+   return(answer)
+}
+ 
+#initialise a dataframe to hold the results
+geocoded <- data.frame()
+# find out where to start in the address list (if the script was interrupted before):
+startindex <- 1
+#if a temp file exists - load it up and count the rows!
+tempfilename <- paste0(infile, '_temp_geocoded.rds')
+if (file.exists(tempfilename)){
+       print("Found temp file - resuming from index:")
+       geocoded <- readRDS(tempfilename)
+       startindex <- nrow(geocoded)
+       print(startindex)
+}
+ 
+# Start the geocoding process - address by address. geocode() function takes care of query speed limit.
+for (ii in seq(startindex, length(addresses))){
+   print(paste("Working on index", ii, "of", length(addresses)))
+   #query the google geocoder - this will pause here if we are over the limit.
+    
+   result = getGeoDetails(addresses[ii]) 
+   print(result$status)     
+   result$index <- ii
+   #append the answer to the results file.
+   geocoded <- rbind(geocoded, result)
+   #save temporary results as we are going along
+   saveRDS(geocoded, tempfilename)
+}
+ 
+#now we add the latitude and longitude to the main data
+data$lat <- geocoded$lat
+data$long <- geocoded$long
+data$accuracy <- geocoded$accuracy
+ 
+#finally write it all to the output files
+saveRDS(data, paste0("../data/", infile ,"_geocoded.rds"))
+write.table(data, file=paste0("../data/", infile ,"_geocoded.csv"), sep=",", row.names=FALSE)
+
 ```
 
 ```{r}
 # villages_main <- read_csv('../Administrative-divisions-of-China/dist/villages.csv')
-
+# villages_main
 # villages_main this is the list of villages, not necessarily helpful, wait for response from the chinese village researchers
 ```
 
 ```{r}
 
-n <- left_join(main_table_chips_2002, counties_main, by=c('coun'='code'))
-
-
+n <- left_join(main_table_chips_2002, prov_county_main, by=c('coun'='code'))
+n
 nrow(n)
 head(n)
-
-
 
 ```
