get rid of tokens

--- a/processing.Rmd
+++ b/processing.Rmd
@@ -126,6 +126,8 @@ library(ggmap)
 
 ggmap_credentials()
 
+register_google(key='')
+
 ggmap_credentials()
 
 library(ggmap)
@@ -226,7 +228,7 @@ write.table(blar, file=paste0("", infile ,"_geocoded.csv"), sep=",", row.names=F
 
 ```
 
-now there's two tables, concatenate them
+# Now there's two tables, put them together vertically
 
 ```{r}
 a <- read_csv('pcoun_1_geocoded.csv')
@@ -253,8 +255,55 @@ prov_county_main
 ```{r}
 
 n <- left_join(main_table_chips_2002, prov_county_main, by=c('coun'='code'))
+
+
+```
+
+
+```{r}
+
 n
-nrow(n)
-head(n)
+
+```
+
+
+```{r}
+library(ggplot2)
+
+# test out the get map based on long lat
+location <- get_map(location = c(lon = 116.4164, lat = 39.92835), zoom = 16, maptype = "satellite") %>% 
+  ggmap()
+
+location
+```
+
+
+## Make bounding box off of 
+```{r}
+bounding_box <- function(lat, lon, dist, in.miles = TRUE) {
+
+    ## Helper functions
+    if (in.miles) {
+        ang_rad <- function(miles) miles/3958.756
+    } else {
+        ang_rad <- function(miles) miles/1000
+    }
+    `%+/-%` <- function(x, margin){x + c(-1, +1)*margin}
+    deg2rad <- function(x) x/(180/pi)
+    rad2deg <- function(x) x*(180/pi)
+    lat_range <- function(latr, r) rad2deg(latr %+/-% r)
+    lon_range <- function(lonr, dlon) rad2deg(lonr %+/-% dlon)
+
+    r <- ang_rad(dist)
+    latr <- deg2rad(lat)
+    lonr <- deg2rad(lon)
+    dlon <- asin(sin(r)/cos(latr))
+
+    m <- matrix(c(lon_range(lonr = lonr, dlon = dlon), 
+        lat_range(latr=latr, r=r)), nrow=2, byrow = TRUE)
+
+    dimnames(m) <- list(c("lng", "lat"), c("min", "max"))
+    m
+}
 
 ```
