--- a/mar160.md
+++ b/mar160.md
@@ -31,7 +31,7 @@ I use R for wrangling tabular data, python tools for raster processing and stati
 
 See diagram here:
 
-![img](docs/Artboard 1-22.jpg)
+![img](https://github.com/xrwang/taobao-villages/blob/master/docs/Artboard%201-22.jpg)
 
 
 ### Links to tools mentioned:
