--- a/mar160.md
+++ b/mar160.md
@@ -27,7 +27,7 @@ Finally, the repo heartily uses open source geospatial tools via https://gist.gi
 
 I use R for wrangling tabular data, python tools for raster processing and statistics.
 
-### Workflow + Components
+### Walkthrough / Components
 
 See diagram here:
 
