--- a/scripts/processing.Rmd
+++ b/scripts/processing.Rmd
@@ -69,8 +69,8 @@ counties_main
 counties_main$lat <- 'NA'
 counties_main$long <- 'NA'
 
-city_main <- read_csv('../Administrative-divisions-of-China/dist/cities.csv')
-province_main <- read_csv('../Administrative-divisions-of-China/dist/provinces.csv')
+city_main <- read_csv('https://raw.githubusercontent.com/modood/Administrative-divisions-of-China/master/dist/cities.csv')
+province_main <- read_csv('https://raw.githubusercontent.com/modood/Administrative-divisions-of-China/master/dist/provinces.csv')
 
 prov_county_main <- left_join(counties_main, province_main,
                               by=c('provinceCode'='code'))
@@ -137,100 +137,100 @@ ggmap_credentials()
 
 ```{r}
 
-
-infile <- 'pcoun_2'
-data <-pcoun_codes_2
-
-addresses = data$geocodeAdd
-
-#define a function that will process googles server responses for us.
-getGeoDetails <- function(address){   
-   #use the gecode function to query google servers
-   geo_reply = geocode(address, output='all', messaging=TRUE, override_limit=TRUE)
-   #now extract the bits that we need from the returned list
-
-   answer <- data.frame(lat=NA, long=NA, accuracy=NA, formatted_address=NA, address_type=NA, status=NA)
-   answer$status <- geo_reply$status
- 
-   #if we are over the query limit - want to pause for an hour
-   while(geo_reply$status == "OVER_QUERY_LIMIT"){
-       print("OVER QUERY LIMIT - Pausing for 1 hour at:") 
-       time <- Sys.time()
-       print(as.character(time))
-       Sys.sleep(60*60)
-       geo_reply = geocode(address, output='all', messaging=TRUE, override_limit=TRUE)
-       answer$status <- geo_reply$status
-   }
- 
-   #return Na's if we didn't get a match:
-   if (geo_reply$status != "OK"){
-       return(answer)
-   }   
-   #else, extract what we need from the Google server reply into a dataframe:
-   answer$lat <- geo_reply$results[[1]]$geometry$location$lat
-   answer$long <- geo_reply$results[[1]]$geometry$location$lng   
-   if (length(geo_reply$results[[1]]$types) > 0){
-       answer$accuracy <- geo_reply$results[[1]]$types[[1]]
-   }
-   answer$address_type <- paste(geo_reply$results[[1]]$types, collapse=',')
-   answer$formatted_address <- geo_reply$results[[1]]$formatted_address
-    
-   return(answer)
-}
- 
-#initialise a dataframe to hold the results
-geocoded <- data.frame()
-# find out where to start in the address list (if the script was interrupted before):
-startindex <- 1
-#if a temp file exists - load it up and count the rows!
-tempfilename <- paste0(infile, '_temp_geocoded.rds')
-if (file.exists(tempfilename)){
-       print("Found temp file - resuming from index:")
-       geocoded <- readRDS(tempfilename)
-       startindex <- nrow(geocoded)+1
-       print(startindex)
-}
- 
-# Start the geocoding process - address by address. geocode() function takes care of query speed limit.
-for (ii in seq(startindex, length(addresses))){
-   print(paste("Working on index", ii, "of", length(addresses)))
-   #query the google geocoder - this will pause here if we are over the limit.
-    
-   result = getGeoDetails(addresses[ii]) 
-   print(result$status)     
-   result$index <- ii
-   #append the answer to the results file.
-   geocoded <- rbind(geocoded, result)
-   #save temporary results as we are going along
-   saveRDS(geocoded, tempfilename)
-}
+# 
+# infile <- 'pcoun_2'
+# data <-pcoun_codes_2
+# 
+# addresses = data$geocodeAdd
+# 
+# #define a function that will process googles server responses for us.
+# getGeoDetails <- function(address){   
+#    #use the gecode function to query google servers
+#    geo_reply = geocode(address, output='all', messaging=TRUE, override_limit=TRUE)
+#    #now extract the bits that we need from the returned list
+# 
+#    answer <- data.frame(lat=NA, long=NA, accuracy=NA, formatted_address=NA, address_type=NA, status=NA)
+#    answer$status <- geo_reply$status
+#  
+#    #if we are over the query limit - want to pause for an hour
+#    while(geo_reply$status == "OVER_QUERY_LIMIT"){
+#        print("OVER QUERY LIMIT - Pausing for 1 hour at:") 
+#        time <- Sys.time()
+#        print(as.character(time))
+#        Sys.sleep(60*60)
+#        geo_reply = geocode(address, output='all', messaging=TRUE, override_limit=TRUE)
+#        answer$status <- geo_reply$status
+#    }
+#  
+#    #return Na's if we didn't get a match:
+#    if (geo_reply$status != "OK"){
+#        return(answer)
+#    }   
+#    #else, extract what we need from the Google server reply into a dataframe:
+#    answer$lat <- geo_reply$results[[1]]$geometry$location$lat
+#    answer$long <- geo_reply$results[[1]]$geometry$location$lng   
+#    if (length(geo_reply$results[[1]]$types) > 0){
+#        answer$accuracy <- geo_reply$results[[1]]$types[[1]]
+#    }
+#    answer$address_type <- paste(geo_reply$results[[1]]$types, collapse=',')
+#    answer$formatted_address <- geo_reply$results[[1]]$formatted_address
+#     
+#    return(answer)
+# }
+#  
+# #initialise a dataframe to hold the results
+# geocoded <- data.frame()
+# # find out where to start in the address list (if the script was interrupted before):
+# startindex <- 1
+# #if a temp file exists - load it up and count the rows!
+# tempfilename <- paste0(infile, '_temp_geocoded.rds')
+# if (file.exists(tempfilename)){
+#        print("Found temp file - resuming from index:")
+#        geocoded <- readRDS(tempfilename)
+#        startindex <- nrow(geocoded)+1
+#        print(startindex)
+# }
+#  
+# # Start the geocoding process - address by address. geocode() function takes care of query speed limit.
+# for (ii in seq(startindex, length(addresses))){
+#    print(paste("Working on index", ii, "of", length(addresses)))
+#    #query the google geocoder - this will pause here if we are over the limit.
+#     
+#    result = getGeoDetails(addresses[ii]) 
+#    print(result$status)     
+#    result$index <- ii
+#    #append the answer to the results file.
+#    geocoded <- rbind(geocoded, result)
+#    #save temporary results as we are going along
+#    saveRDS(geocoded, tempfilename)
+# }
 
 ```
 
 ```{r}
-blar <- data.frame(matrix(ncol = 3, nrow = 1516))
-#now we add the latitude and longitude to the main data
-
-blar$status <- geocoded$status
-blar$formatted_address <- geocoded$formatted_address
-blar$index <- geocoded$index
-blar$lat <- geocoded$lat
-blar$long <- geocoded$long
-blar$accuracy <- geocoded$accuracy
- 
-
-
-#finally write it all to the output files
-#saveRDS(data, paste0("../data/", infile ,"_geocoded.rds"))
-write.table(blar, file=paste0("", infile ,"_geocoded.csv"), sep=",", row.names=FALSE)
+# blar <- data.frame(matrix(ncol = 3, nrow = 1516))
+# #now we add the latitude and longitude to the main data
+# 
+# blar$status <- geocoded$status
+# blar$formatted_address <- geocoded$formatted_address
+# blar$index <- geocoded$index
+# blar$lat <- geocoded$lat
+# blar$long <- geocoded$long
+# blar$accuracy <- geocoded$accuracy
+#  
+# 
+# 
+# #finally write it all to the output files
+# #saveRDS(data, paste0("../data/", infile ,"_geocoded.rds"))
+# write.table(blar, file=paste0("", infile ,"_geocoded.csv"), sep=",", row.names=FALSE)
 
 ```
 
 # Now there's two tables, put them together vertically
 
 ```{r}
-a <- read_csv('pcoun_1_geocoded.csv')
-b <- read_csv('pcoun_2_geocoded.csv')
+a <- read_csv('data/pcoun_1_geocoded.csv')
+b <- read_csv('data/pcoun_2_geocoded.csv')
 geocoded_areas <- bind_rows(a,b)
 
 prov_county_main$lat <- geocoded_areas$lat
